--- a/.gitignore
+++ b/.gitignore
@@ -41,7 +41,12 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
+
+# Environment variables
 .env
+
+# Ignore .vscode folder
+.vscode/
 
 # Snowpack dependency directory (https://snowpack.dev/)
 web_modules/
